Fix gaps

--- a/swemint-nft/styles/Home.module.css
+++ b/swemint-nft/styles/Home.module.css
@@ -14,7 +14,7 @@
   left: 0;
   right: 0;
   background: black;
-  opacity: 0.5;
+  opacity: 0.8;
   z-index: -1;
 
 }
